[gd_scene load_steps=12 format=2]

[ext_resource path="res://Code/Window_Locale.gd" type="Script" id=1]
[ext_resource path="res://Main_Theme.tres" type="Theme" id=2]
[ext_resource path="res://Code/Main_Menu.gd" type="Script" id=3]
[ext_resource path="res://Code/Main.gd" type="Script" id=4]
[ext_resource path="res://Code/Base_Actions.gd" type="Script" id=5]
[ext_resource path="res://Menu_Theme.tres" type="Theme" id=6]
[ext_resource path="res://Code/Window_Message.gd" type="Script" id=7]
[ext_resource path="res://Code/string.gd" type="Script" id=8]
[ext_resource path="res://Code/About.gd" type="Script" id=9]
[ext_resource path="res://Code/Main_Menu_Items.gd" type="Script" id=10]
[ext_resource path="res://Code/Settings.gd" type="Script" id=11]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="str" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 8 )

[node name="Main_Menu" type="Control" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 230.0
margin_bottom = 590.0
script = ExtResource( 3 )

[node name="mm_ackground" type="ColorRect" parent="Main_Menu"]
margin_right = 220.0
margin_bottom = 580.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="mm_base_actions" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 60.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
toggle_mode = true
pressed = true
enabled_focus_mode = 0
text = "Base Actions"
icon_align = 2
expand_icon = true

[node name="2" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 70.0
margin_right = 210.0
margin_bottom = 120.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
toggle_mode = true
enabled_focus_mode = 0
text = "Change Font"
icon_align = 2
expand_icon = true

[node name="3" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 130.0
margin_right = 210.0
margin_bottom = 180.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
toggle_mode = true
enabled_focus_mode = 0
text = "- save"
icon_align = 2
expand_icon = true

[node name="4" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 190.0
margin_right = 210.0
margin_bottom = 240.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
toggle_mode = true
enabled_focus_mode = 0
text = "message"
icon_align = 2
expand_icon = true

[node name="5" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 250.0
margin_right = 210.0
margin_bottom = 300.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
text = "-"
icon_align = 2
expand_icon = true

[node name="6" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 310.0
margin_right = 210.0
margin_bottom = 360.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
text = "-"
icon_align = 2
expand_icon = true

[node name="7" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 370.0
margin_right = 210.0
margin_bottom = 420.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
text = "-"
icon_align = 2
expand_icon = true

[node name="mm_version" type="Label" parent="Main_Menu"]
margin_left = 10.0
margin_top = 435.0
margin_right = 210.0
margin_bottom = 465.0
theme = ExtResource( 2 )
text = "version"
align = 1
valign = 1

[node name="mm_settings" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 480.0
margin_right = 210.0
margin_bottom = 517.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
toggle_mode = true
enabled_focus_mode = 0
text = "Settings"
icon_align = 2
expand_icon = true

[node name="mm_about" type="Button" parent="Main_Menu"]
margin_left = 10.0
margin_top = 530.0
margin_right = 210.0
margin_bottom = 570.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
toggle_mode = true
enabled_focus_mode = 0
text = "About"
icon_align = 2
expand_icon = true

[node name="Main_Menu_Items" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )

[node name="Base_Actions" type="Control" parent="Main_Menu_Items"]
margin_left = 240.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 590.0
script = ExtResource( 5 )

[node name="base_background" type="ColorRect" parent="Main_Menu_Items/Base_Actions"]
margin_right = 750.0
margin_bottom = 580.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="base_actions_hint" type="Label" parent="Main_Menu_Items/Base_Actions"]
margin_left = 20.0
margin_top = 10.0
margin_right = 730.0
margin_bottom = 40.0
mouse_filter = 0
theme = ExtResource( 2 )
valign = 1

[node name="base_actions_hint2" type="LineEdit" parent="Main_Menu_Items/Base_Actions"]
unique_name_in_owner = true
margin_left = 10.0
margin_top = 530.0
margin_right = 740.0
margin_bottom = 570.0
focus_mode = 0
theme = ExtResource( 2 )
text = "test"
align = 1
editable = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="clear_thumbcache" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 20.0
margin_top = 50.0
margin_right = 355.0
margin_bottom = 90.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "clear_thumbcache"

[node name="restart_xfcepanel" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 20.0
margin_top = 110.0
margin_right = 355.0
margin_bottom = 150.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "restart_xfcepanel"

[node name="restart_thunar" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 20.0
margin_top = 170.0
margin_right = 355.0
margin_bottom = 210.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "restart_thunar"

[node name="clean_xsession" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 20.0
margin_top = 230.0
margin_right = 355.0
margin_bottom = 270.0
hint_tooltip = "Temporarily solves a typical Linux problem with an inappropriately large log file."
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "clean_xsession"

[node name="drop_caches" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 395.0
margin_top = 50.0
margin_right = 730.0
margin_bottom = 90.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "drop_caches"

[node name="drop_caches_all" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 395.0
margin_top = 110.0
margin_right = 730.0
margin_bottom = 150.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "drop_caches_all"

[node name="6" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 395.0
margin_top = 170.0
margin_right = 730.0
margin_bottom = 210.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "-"

[node name="7" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 395.0
margin_top = 230.0
margin_right = 730.0
margin_bottom = 270.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "-"

[node name="8" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 395.0
margin_top = 290.0
margin_right = 730.0
margin_bottom = 330.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "-"

[node name="9" type="Button" parent="Main_Menu_Items/Base_Actions"]
margin_left = 395.0
margin_top = 350.0
margin_right = 730.0
margin_bottom = 390.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "-"

[node name="Settings" type="Control" parent="Main_Menu_Items"]
visible = false
margin_left = 240.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 590.0
script = ExtResource( 11 )

[node name="about_background" type="ColorRect" parent="Main_Menu_Items/Settings"]
margin_right = 750.0
margin_bottom = 580.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="current_work_dir" type="LineEdit" parent="Main_Menu_Items/Settings"]
margin_left = 10.0
margin_top = 530.0
margin_right = 740.0
margin_bottom = 570.0
focus_mode = 0
theme = ExtResource( 2 )
text = "Current executable folder"
align = 1
editable = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="About" type="Control" parent="Main_Menu_Items"]
visible = false
margin_left = 240.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 590.0
script = ExtResource( 9 )

[node name="about_background" type="ColorRect" parent="Main_Menu_Items/About"]
margin_right = 750.0
margin_bottom = 580.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )

[node name="TextEdit" type="TextEdit" parent="Main_Menu_Items/About"]
margin_left = 10.0
margin_top = 10.0
margin_right = 740.0
margin_bottom = 490.0
theme = ExtResource( 2 )
text = "-=== Chimbalix Tweaker ===- 
Powered by Godot Engine.

-=== Resources ===-
- Font Noto Sans (Google, SIL OPEN FONT LICENSE Version 1.1 - 26 February 2007)
URL: https://fonts.google.com/noto/specimen/Noto+Sans/about

-=== Links ===-
- Chimbalix Tweaker (GitHub):
URL: https://github.com/Shedou/Chimbalix-Tweaker - ( MIT license )

- Godot Engine v3.5.3:
URL: https://godotengine.org - ( MIT license, \"godotengine.org/license\" )

-=== Authors ===-
- Chimbal
GitHub: https://github.com/Shedou
Blog: https://overclockers.ru/blog/Hard-Workshop"
readonly = true
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
smooth_scrolling = true
wrap_enabled = true
minimap_draw = true

[node name="TranslatedBy" type="Label" parent="Main_Menu_Items/About"]
margin_left = 10.0
margin_top = 490.0
margin_right = 740.0
margin_bottom = 530.0
mouse_filter = 0
theme = ExtResource( 2 )
text = "Translated by..."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="btn1" type="Button" parent="Main_Menu_Items/About"]
margin_left = 10.0
margin_top = 530.0
margin_right = 240.0
margin_bottom = 570.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
text = "Not Used"
icon_align = 2
expand_icon = true

[node name="btn2" type="Button" parent="Main_Menu_Items/About"]
margin_left = 260.0
margin_top = 530.0
margin_right = 490.0
margin_bottom = 570.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
text = "Not Used"
icon_align = 2
expand_icon = true

[node name="btn3" type="Button" parent="Main_Menu_Items/About"]
margin_left = 510.0
margin_top = 530.0
margin_right = 740.0
margin_bottom = 570.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
disabled = true
toggle_mode = true
enabled_focus_mode = 0
text = "Not Used"
icon_align = 2
expand_icon = true

[node name="Window_Locale" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Window_Message" type="Control" parent="."]
unique_name_in_owner = true
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 990.0
margin_bottom = 590.0
script = ExtResource( 7 )

[node name="wm_background" type="ColorRect" parent="Window_Message"]
margin_right = 980.0
margin_bottom = 580.0
color = Color( 0, 0.12549, 0.247059, 0.827451 )

[node name="wm_background_Title" type="ColorRect" parent="Window_Message"]
margin_right = 980.0
margin_bottom = 50.0
color = Color( 0, 0.0901961, 0.176471, 1 )

[node name="wm_title" type="Label" parent="Window_Message"]
margin_right = 980.0
margin_bottom = 50.0
theme = ExtResource( 6 )
text = "Title"
align = 1
valign = 1

[node name="wm_message" type="TextEdit" parent="Window_Message"]
margin_left = 10.0
margin_top = 50.0
margin_right = 970.0
margin_bottom = 520.0
theme = ExtResource( 2 )
text = "Message"
readonly = true
show_line_numbers = true
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false
wrap_enabled = true
minimap_draw = true

[node name="wm_close" type="Button" parent="Window_Message"]
margin_left = 10.0
margin_top = 530.0
margin_right = 210.0
margin_bottom = 570.0
focus_mode = 0
theme = ExtResource( 6 )
enabled_focus_mode = 0
text = "Close message"

[node name="wm_save" type="Button" parent="Window_Message"]
margin_left = 770.0
margin_top = 530.0
margin_right = 970.0
margin_bottom = 570.0
focus_mode = 0
theme = ExtResource( 6 )
enabled_focus_mode = 0
text = "Save"

[connection signal="pressed" from="Main_Menu/mm_base_actions" to="Main_Menu" method="_on_mm_base_actions_pressed"]
[connection signal="pressed" from="Main_Menu/2" to="." method="_on_2_pressed"]
[connection signal="pressed" from="Main_Menu/3" to="." method="_on_3_pressed"]
[connection signal="pressed" from="Main_Menu/4" to="Main_Menu" method="_on_4_pressed"]
[connection signal="pressed" from="Main_Menu/mm_settings" to="Main_Menu" method="_on_mm_settings_pressed"]
[connection signal="pressed" from="Main_Menu/mm_about" to="Main_Menu" method="_on_mm_about_pressed"]
[connection signal="pressed" from="Main_Menu_Items/Base_Actions/clear_thumbcache" to="Main_Menu_Items/Base_Actions" method="_on_clear_thumbcache_pressed"]
[connection signal="pressed" from="Main_Menu_Items/Base_Actions/restart_xfcepanel" to="Main_Menu_Items/Base_Actions" method="_on_restart_xfcepanel_pressed"]
[connection signal="pressed" from="Main_Menu_Items/Base_Actions/restart_thunar" to="Main_Menu_Items/Base_Actions" method="_on_restart_thunar_pressed"]
[connection signal="pressed" from="Main_Menu_Items/Base_Actions/clean_xsession" to="Main_Menu_Items/Base_Actions" method="_on_clean_xsession_pressed"]
[connection signal="pressed" from="Main_Menu_Items/Base_Actions/drop_caches" to="Main_Menu_Items/Base_Actions" method="_on_drop_caches_pressed"]
[connection signal="pressed" from="Main_Menu_Items/Base_Actions/drop_caches_all" to="Main_Menu_Items/Base_Actions" method="_on_drop_caches_all_pressed"]
[connection signal="pressed" from="Window_Message/wm_close" to="Window_Message" method="_on_wm_close_pressed"]
[connection signal="pressed" from="Window_Message/wm_save" to="Window_Message" method="_on_wm_save_pressed"]
